v3.0.6版本源码